# nfo-editor

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  conanfile.txt  vcpkg.json
src/: CMakeLists.txt  NfoEditor.cpp  NfoEditorAutocomplete.cpp  NfoEditorAutocomplete.hpp  NfoEditorQtBridge.cpp  NfoEditorQtBridge.hpp  NfoEditorUtils.cpp  NfoEditorUtils.hpp  NfoEditorXml.cpp  NfoEditorXml.hpp  nfo_editor.cpp
src/qml/: CustomButton.qml  LabeledInput.qml  LabeledListInput.qml  NfoEditor.qml  NfoEditor.qrc  RemovableItem.qml  SuggestionBox.qml  SuggestionItem.qml  SuggestionPanel.qml
